--- a/eShopSolutionBacken.Api/appsettings.json
+++ b/eShopSolutionBacken.Api/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Token": {
+    "Key": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "Issuer": "http://localhost/abc"
+  }
+
 }
